# acci_base

./: .clippy.toml  .cursorrules  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: docker-security.yml  rust-tests.yml
config/: .env.dev.template  .env.prod.template  .env.test.template  config.dev.toml.template  config.prod.toml.template  config.test.toml
crates/event_store/: Cargo.toml
crates/event_store/src/: client.rs  config.rs  events.rs  lib.rs
doc/api/: README.md
doc/api/de/: README.md
doc/api/de/graphql/: schema.graphql
doc/api/de/rest/: openapi.yaml
doc/api/de/rest/authentication/: README.md
doc/api/en/graphql/: schema.graphql
doc/api/en/rest/: openapi.yaml
doc/api/en/rest/authentication/: README.md
doc/api/es/: README.md
doc/api/es/rest/: openapi.yaml
doc/api/fr/: README.md
doc/api/fr/rest/: openapi.yaml
doc/api/insomnia/: ACCI_Framework.insomnia.json
doc/api/postman/: ACCI_Framework.postman_collection.json
doc/api/sq/: README.md
doc/api/sq/graphql/: schema.graphql
doc/api/sq/rest/: openapi.yaml
doc/api/sq/rest/authentication/: README.md
doc/architecture/: configuration.md  cqrs.md  docker.md
doc/developer-portal/: README.md
doc/developer-portal/de/: README.md  deployment.md  event-sourcing.md
doc/developer-portal/es/: README.md  deployment.md  event-sourcing.md
doc/developer-portal/fr/: README.md  deployment.md  event-sourcing.md
doc/developer-portal/sq/: README.md  deployment.md  event-sourcing.md
doc/monitoring/: README.md
doc/security/: README.md
docker/: .container-structure-test.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  compose-env.sh  compose.dev.yaml  compose.prod.yaml  compose.test.yaml
docker/alertmanager/: alertmanager.yml
docker/alertmanager/templates/: email.tmpl  jabber.tmpl  slack.tmpl  teams.tmpl
docker/grafana/dashboards/: business_metrics.json  service_monitoring.json  system_overview.json  tenant_template.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/prometheus/: prometheus.yml
docker/prometheus/rules/: alerts.yml
locales/de/: main.ftl
locales/en/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
locales/sq/: main.ftl
migration/: Cargo.toml
migration/src/: lib.rs  m20240301_000001_create_tenant_table.rs  m20240318_000001_create_base_schema.rs  m20240319_000001_create_users_table.rs
scripts/: check-hardcoded-strings.sh  check-translations.rs  rust-checks.sh  setup-keycloak.sh
src/: main.rs  router.rs
src/api/: auth.rs  health.rs  metrics.rs  mod.rs  not_found.rs  tenant.rs
src/common/: config.rs  error.rs  i18n.rs  logging.rs  metrics.rs  mod.rs
src/common/middleware/: auth.rs  auth_test.rs  language.rs  mod.rs  tenant.rs  tenant_middleware.rs  tenant_test.rs
src/common/models/: auth.rs
src/domain/: mod.rs  tenant.rs  user.rs
src/frontend/auth/: mod.rs
src/frontend/auth/components/: auth_callback.rs  login_button.rs  logout_button.rs  mod.rs
src/infrastructure/: cache.rs  config.rs  database.rs  event_store.rs  message_broker.rs  mod.rs  redis.rs  state.rs
src/infrastructure/database/: connection.rs  database.rs
src/infrastructure/database/entities/: tenant.rs
src/infrastructure/services/: tenant_service.rs
