[package]
name = "acci_base"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Core Framework
axum = { version = "0.8.1", features = ["macros", "http2", "query"] }
hyper = "1.5.2"
hyper-util = "0.1"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-full"] }
async-trait = "0.1.77"

# Database
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "dataloader"] }
async-graphql-axum = "7.0"

# Authentication & Authorization
jsonwebtoken = "9.2"
argon2 = "0.5"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.1"

# Error Handling
thiserror = "2.0.10"
anyhow = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11.1", features = ["v4", "serde"] }
config = { version = "0.15.5", features = ["toml"] }
dotenvy = "0.15"
once_cell = "1.19"
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.14.1"
unic-langid = "0.9"
bytes = "1.5"
http-body-util = "0.1"
intl-memoizer = "0.5"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
reqwest = { version = "0.12.12", features = ["json"] }
walkdir = "2.4.0"
mockall = "0.13.1"
async-trait = "0.1.77"
serial_test = "3.0.0"
