[package]
name = "acci_base"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Core Framework
axum = { version = "0.8.1", features = ["macros", "http2", "query"] }
hyper = "1.5.2"
hyper-util = "0.1.10"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-full"] }
async-trait = "0.1.85"

# Database
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls"] }

# GraphQL
async-graphql = { version = "7.0.13", features = ["chrono", "dataloader"] }
async-graphql-axum = "7.0.13"

# Authentication & Authorization
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
keycloak = "26.0.700"
openid = "0.16.1"
oauth2 = "4.4"
oso = "0.27.0"
polar-core = "0.27.0"
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json"] }
headers = "0.4"

# Logging & Metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.1"

# Error Handling
thiserror = "2.0.11"
anyhow = "1.0.95"

# Utilities
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.1", features = ["v4", "serde"] }
config = { version = "0.15.5", features = ["toml"] }
dotenvy = "0.15.7"
once_cell = "1.20.2"
fluent = "0.16.1"
fluent-bundle = "0.15.3"
fluent-langneg = "0.14.1"
unic-langid = "0.9.5"
bytes = "1.9.0"
http-body-util = "0.1.2"
intl-memoizer = "0.5.2"
lazy_static = "1.4"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4.4"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.12", features = ["json"] }
walkdir = "2.5.0"
mockall = "0.13.1"
async-trait = "0.1.85"
serial_test = "3.2.0"

[workspace]
members = [".", "migration"]
