[package]
name = "acci_base"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Core Framework
axum = { version = "0.8.1", features = ["macros", "http2", "query"] }
hyper = "1.5.2"
hyper-util = "0.1.10"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-full"] }
async-trait = "0.1.85"

# Database
sea-orm = { version = "1.1.4", features = ["runtime-tokio-rustls", "sqlx-postgres", "mock", "macros"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls"] }

# GraphQL
async-graphql = { version = "7.0.13", features = ["chrono", "dataloader"] }
async-graphql-axum = "7.0.13"

# Authentication & Authorization
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
keycloak = "26.0.700"
openid = "0.16.1"
oauth2 = "4.4.2"
oso = "0.27.3"
polar-core = "0.27.3"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.12.12", features = ["json"] }
headers = "0.4.0"

# Logging & Metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.1"

# Error Handling
thiserror = "2.0.11"
anyhow = "1.0.95"

# Internationalization & Localization
fluent = "0.16.1"
fluent-bundle = "0.15.3"
fluent-langneg = "0.14.1"
unic-langid = "0.9.5"
intl-memoizer = "0.5.2"
zerovec = { version = "0.10.4", features = ["yoke"] }
yoke = "0.7.3"
icu_provider = "1.5.0"
icu_properties = "1.5.1"
icu_normalizer = "1.5.0"
icu_locid = "1.5.0"
icu_locid_transform = "1.5.0"

# Utilities
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
config = { version = "0.15.6", features = ["toml"] }
dotenvy = "0.15.7"
once_cell = "1.20.2"
bytes = "1.9.0"
http-body-util = "0.1.2"
lazy_static = "1.5.0"
regex = "1.11.1"
sysinfo = { version = "0.33.1", features = ["component", "disk", "system"] }
axum-core = "0.5.0"
sea-orm-migration = "1.1.4"

# Migration
migration = { path = "migration" }

eventstore = "2.3"
lapin = "2.3"

event_store = { path = "crates/event_store" }

[dev-dependencies]
tokio-test = "0.4.4"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.12", features = ["json"] }
walkdir = "2.5.0"
mockall = "0.13.1"
async-trait = "0.1.85"
serial_test = "3.2.0"

[workspace]
members = [".", "crates/event_store", "migration"]
