[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.4", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-query = "0.32"
tokio = { version = "1.43.0", features = ["full"] }
syn = "2.0.96"
