[package]
name = "event_store"
version = "0.1.0"
edition = "2021"
description = "Event Store integration for ACCI"
authors = ["ACCI Team <team@acci.io>"]

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Metrics & Tracing
metrics = "0.21"
tracing = "0.1"

# Configuration
config = "0.14"

# Utilities
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-case = "3.3"
wiremock = "0.5"
